update current model to include saved values